gobmkida/c2/close_bubbles
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/close_bubbles/src/engine/score.c:659:11: error: use of undeclared identifier 'byte_9B389F'
|| ( v6 = byte_9B389F[v3], v6 != 3) && v16[v3 + 19] == 3 
          ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/close_bubbles/src/engine/score.c:660:11: error: use of undeclared identifier 'byte_9B388C'
|| ( v7 = byte_9B388C[v3], v7 != 3) && v16[v3] == 3 
          ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/close_bubbles/src/obj/1/score.o] Error 1
